# LastFM-OSS-Analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
dags/: ingest_artists_daily.py  ingest_chart_daily.py  ingest_geo_daily.py  ingest_tags_daily.py  ingest_tracks_daily.py  ingest_users_daily.py
docker/minio/: create-buckets.sh
docker/postgres/initdb.d/: 00_init.sql
docker/vault/: config.hcl  init-dev.sh
docker/vault/policies/: minio-read.hcl  postgres-read.hcl
infra/: .env.template  compose.yaml  vault_check.py
scripts/: check_s3.py  vault_check.py
src/: __init__.py
src/ingestion/: config.py  exception.py  lastfm_client.py  run_extract.py  secrets.py  storage.py
src/ingestion/extractors/: artist.py  base.py  chart.py  geo.py  tags.py  tracks.py  user.py
tests/: test_ci.py  test_lastfm_client.py  test_run_extract.py  test_storage.py
